test/kubernetes/e2e/features/jwt/testdata/jwt-rbac.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: default
spec:
  hostnames:
    - httpbin
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /status/200
    - backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /get
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.kgateway.dev
            kind: TrafficPolicy
            name: jwt-rbac-policy
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: jwt-rbac-policy
spec:
  rbac:
    rules:
    - principal:
        jwt:
        - provider: my-example
          claims:
          - name: email
            value: dev2@kgateway.io # route requires dev2
  jwt:
    providers:
      my-example:
        claimsToHeaders:
          - name: email
            header: x-email
        issuer: https://dev.example.com
        jwks:
          local:
            key: |
              -----BEGIN PUBLIC KEY-----
              MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAruK9KacQjDePRyfG7oPI
[...]
              CwIDAQAB
              -----END PUBLIC KEY-----
